--- a/index.html
+++ b/index.html
@@ -280,16 +280,26 @@ footer {
             run small gigs or sell digital products after the class.
         </p>
     </div>
+    <div class="project-card">
+        <h3>Typing Speed Test</h3>
+        <p>Created a typing speed test web app featuring real-time WPM calculation, 
+            accuracy tracking, and a clean UI. Designed to help users improve their typing skills.
+        <p>The app presents random text passages for users to type,
+             calculates words per minute (WPM) and accuracy, and provides instant feedback.
+        </p>
+        </p>
+        <p>The app is lightweight and responsive,
+             making it accessible on both desktop and mobile devices. It includes a 
+             countdown timer and a reset button for repeated practice sessions.
+        </p>
+    </div>
 </div>
 </section>
 
 <section id="contact">
     <h2>Contact Me</h2>
-    <p><strong>WhatsApp:</strong> <a href="https://wa.me/254743379497?text=Hi%20Starlex!%20I%27m%20interested%20in%20your%20tech%20proj%20%20%20%20%20%20%20%20ects%20and%20digital%20hustles.%20Let%27s%20connect" target="_blank">Message Me on WhatsApp</a></p>
-    
+    <p>Feel free to reach out for collaborations, questions, or just to say hi!</p> 
     <p><strong>Email:</strong> <a href="mailto:starlexbolen465@gmail.com">starlexbolen465@gmail.com</a></p>
-    <p><strong>Instagram:</strong> <a href="https://instagram.com/starlexbolen465" target="_blank">@starlexbolen465</a></p>
-    <p><strong>Facebook:</strong> <a href="https://www.facebook.com/profile.php?id=100094431515063" target="_blank">Connect on Facebook</a></p>
     <p><strong>Linktree:</strong> <a href="https://linktr.ee/StarlexBolen" target="_blank">StarlexBolen Resources</a></p>
 
     <form action="https://formspree.io/f/xblkagye" method="POST">
@@ -300,7 +310,6 @@ footer {
         <button type="submit">Send</button>
     </form>
 </section>
-<button onclick="alert('Accessing Starlex vault...System breach successful')">TryHack</button>
 
 <footer>
     <footer style="text-align:center
@@ -309,8 +318,7 @@ footer {
     background-color: #111;
     font-family: monospace;">
     <p>
-        &lt;/&gt; Access granted! Welcome to my digital playground.
-         #BreakRulesBuildTools // Powered by curiosity & caffeine.
+        &copy; 2025 Starlex Digital Projects. All Rights Reserved.
     </p>
     </footer>
 <script>
