--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@ footer {
              making it accessible on both desktop and mobile devices. It includes a 
              countdown timer and a reset button for repeated practice sessions.
         </p>
+        <p><a href="https://SB-043.github.io/TypingSpeedTest/">Click here to test your typing speed</a></p>
     </div>
 </div>
 </section>
